src/test/deca/syntax/valid/created/class_syntax5.deca
class A{
	int methA(Object o){
		return 28;
	}
}


{}
