src/test/deca/syntax/invalid/created/faux39.deca
class A{
	string methA(){
		return "ssfds";
	}
}
{
}
